--- a/views/register.ejs
+++ b/views/register.ejs
@@ -40,9 +40,8 @@
         Already have an account? <a href="/login" class="text-success font-semibold hover:underline">Login</a>
       </div>
       <% } else { %>
-      <div class="alert mt-4">
-        <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-        <span><%= successMessage %></span>
+      <div class="alert mt-4 text-center font-bold">
+        <%= successMessage %>
       </div><br />
       <a href="/login" class="btn btn-success w-full">Proceed to Log in</a>
       <% } %>
